force-app/main/default/objects/ssot__Budget__dlm/fields/ssot__Budget_AccountId_map_Account_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Budget_AccountId_map_Account_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget_AccountId_map_Account_Id_N_1</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Budget_AccountId_map_Account_Id_N_1</relationshipLabel>
    <relationshipName>Budget_AccountId_map_Account_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>