force-app/main/default/objects/ssot__Budget__dlm/fields/ssot__Budget_ProgramId_map_Program_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Budget_ProgramId_map_Program_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget_ProgramId_map_Program_Id_N_1</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>Budget_ProgramId_map_Program_Id_N_1</relationshipLabel>
    <relationshipName>Budget_ProgramId_map_Program_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>