force-app/main/default/objects/ssot__Budget__dlm/fields/ssot__ParentBudgetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentBudgetId__c</fullName>
    <label>Parent Budget</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentBudgetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>