force-app/main/default/objects/ssot__Budget__dlm/fields/ssot__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PeriodEndDate__c</fullName>
    <label>Period End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PeriodEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>