force-app/main/default/objects/ssot__Budget__dlm/fields/ssot__PeriodName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PeriodName__c</fullName>
    <label>Period Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PeriodName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>