force-app/main/default/objects/ssot__Budget__dlm/fields/ssot__TotalBudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalBudgetAmount__c</fullName>
    <label>Total Budget Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalBudgetAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>